Code cleanup, slightly